# python-for-ai-engineers

./: CONTRIBUTING.md  README.md  STUDY_GUIDE.md  TOPIC_COVERAGE.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-tests.yml
content/level1/: README.md  ai_agent_classes.py  ai_variables.md  ai_variables.py  batch_inference_loops.md  batch_inference_loops.py  chat_history_lists.md  chat_history_lists.py  embeddings_and_vectors.md  embeddings_and_vectors.py  model_config_tuples.md  model_config_tuples.py  model_selection_conditions.md  model_selection_conditions.py  prompt_pipelines.py  prompt_templates_dicts.md  prompt_templates_dicts.py  unique_tokens_sets.md  unique_tokens_sets.py  variables_and_types.py
content/level2/: README.md  agent_class_example.py  ai_pipeline.py  chunk_processing_generators.py  csv_evaluation_data.md  exception_handling.md  file_handling.md  iterators_and_generators.md  json_and_llm_responses.md  lesson_template.md  model_loading_context_manager.py  prompt_pipeline_functions.py  request_logging_decorators.py  sample_evaluations.csv  type_hints_pipeline.py
content/level3/: README.md  advanced_ai_workloads.py  async_llm_api.py  design_patterns.py  memory_and_profiling.md  multiprocessing_embeddings.py  multithreading_inference.py  (+2 more)
notebooks/: README.md  concept_playground.ipynb
tests/: test_level1_examples.py  test_level2_examples.py  test_level3_examples.py  test_level4_examples.py  test_level5_examples.py  test_level6_examples.py  test_package.py  test_topic_coverage.py
(+33 files in other folders)
