[project]
name = "python-for-ai-engineers"
version = "0.1.0"
description = "Original Python curriculum for AI engineers"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
